--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
     "react-dom/client": "https://esm.sh/react-dom@^19.2.3/client",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "marked": "https://esm.sh/marked@^15.0.0"
+    "marked": "https://esm.sh/marked@^15.0.0",
+    "jszip": "https://esm.sh/jszip@^3.10.1"
   }
 }
 </script>
