feat: Enhance tutor learning experience and model capabilities
This commit introduces several improvements to the TutorBuddy application:

- **Enhanced Typography and Readability:** Updated `index.html` with new CSS rules for `.prose` to improve the visual presentation of learning content, making it easier to read with better line spacing, font sizes, and emphasis on key elements.
- **Model Update:** Changed the `metadata.json` description to reflect the use of Gemini 2.5 Flash-Lite, indicating an upgrade in the underlying AI model.
- **Refined Output Modes:** Modified `types.ts` to remove the `videoUrl` field from `LearningContent` and adjusted the default `outputMode` in `TutorForm.tsx` to `TEXT_AUDIO_IMAGES`. This aligns with the shift away from video generation.
- **Improved Gemini Prompts:** Updated `services/geminiService.ts` to provide more structured and directive prompts to the Gemini model for generating tutorials and validating topic safety. This includes specific formatting instructions for better output quality and a clearer JSON schema for safety checks.
- **Streamlined App Logic:** Removed unused variables and functions in `App.tsx` related to video generation (`isVideoDownloading`, `generateVideo`), simplifying the application flow and focusing on the core tutoring features. The `OutputMode` enum has also been adjusted to reflect the available options accurately.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,48 @@
             animation: shimmer 2s infinite linear;
         }
 
-        /* Selection styling */
+        /* Enhanced Readability & Typography */
+        .prose {
+            max-width: 100% !important;
+        }
+        .prose p {
+            line-height: 2 !important;
+            margin-bottom: 2.5rem !important;
+            font-size: 1.15rem;
+            color: #334155;
+        }
+        .prose h1, .prose h2, .prose h3 {
+            margin-top: 3.5rem !important;
+            margin-bottom: 1.75rem !important;
+            color: #0f172a !important;
+            letter-spacing: -0.03em;
+            font-weight: 800;
+        }
+        .prose h2 { font-size: 2rem; border-bottom: 2px solid #f1f5f9; padding-bottom: 0.75rem; }
+        .prose h3 { font-size: 1.5rem; }
+        
+        .prose ul, .prose ol {
+            margin-bottom: 2.5rem !important;
+            padding-left: 1.5rem;
+        }
+        .prose li {
+            margin-bottom: 1.25rem !important;
+            line-height: 1.8;
+            position: relative;
+        }
+        .prose strong {
+            color: #1d4ed8 !important;
+            font-weight: 700;
+        }
+        .prose blockquote {
+            border-left: 4px solid #3b82f6;
+            background: #eff6ff;
+            padding: 1.5rem 2rem;
+            border-radius: 0 1rem 1rem 0;
+            font-style: italic;
+            margin: 2.5rem 0;
+        }
+
         ::selection {
             background-color: #dbeafe;
             color: #1e40af;
