--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
     "marked": "https://esm.sh/marked@^15.0.0",
-    "jszip": "https://esm.sh/jszip@^3.10.1"
+    "jszip": "https://esm.sh/jszip@^3.10.1",
+    "@playwright/test": "https://esm.sh/@playwright/test@^1.58.1"
   }
 }
 </script>
